refactor relationship in db